<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/size_large"
    android:layout_marginEnd="@dimen/size_large"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/size_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_large"
                android:layout_marginEnd="@dimen/size_large"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/do_you_want_delete_channel"
                android:textSize="16sp"
                android:textColor="@color/text"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_huge"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCancelDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_huge"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="14sp"
                    android:text="@string/cancel"
                    android:textColor="@color/accent"
                    android:textAllCaps="true"
                    android:letterSpacing="0.1"
                    android:layout_toStartOf="@+id/tvDeleteChannel" />

                <TextView
                    android:id="@+id/tvDeleteChannel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/ok"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    android:letterSpacing="0.1"
                    android:layout_marginEnd="@dimen/size_medium"

                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>