<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_post_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.new_task.NewPostFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:src="@drawable/ic_arrow_back_24"
        app:iconTint="@color/accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:gravity="start|center_vertical"
        android:text="@string/new_post"
        android:textColor="@color/accent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/new_post_text_background"
        android:gravity="start|top"
        android:padding="16dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/view_tool_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="Привет! Я пишу свой первый отложенный постинг в Телеграм.С уважением,Ваш Петр." />

    <ImageButton
        android:id="@+id/btn_clip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:src="@drawable/ic_clip"
        app:layout_constraintBottom_toBottomOf="@id/tv_post"
        app:layout_constraintEnd_toEndOf="@id/tv_post" />

    <ImageButton
        android:id="@+id/btn_smiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:src="@drawable/ic_smile"
        app:layout_constraintBottom_toBottomOf="@id/tv_post"
        app:layout_constraintEnd_toStartOf="@id/btn_clip" />

    <View
        android:id="@+id/view_help"
        android:layout_width="0dp"
        android:layout_height="@dimen/new_task_tool_panel_corner_radius"
        android:background="@color/textBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_tool_panel" />

    <View
        android:id="@+id/view_tool_panel"
        android:layout_width="0dp"
        android:layout_height="308dp"
        android:background="@drawable/new_post_tool_panel_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_btn"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_button"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        android:textSize="16sp"
        app:icon="@drawable/ic_plus"
        app:iconGravity="textStart"
        app:iconTint="@color/accent"
        app:layout_constraintEnd_toEndOf="@id/view_tool_panel"
        app:layout_constraintStart_toStartOf="@id/view_tool_panel"
        app:layout_constraintTop_toTopOf="@id/view_tool_panel" />

    <ru.teamdroid.colibripost.ui.screens.new_task.NewTaskSpinner
        android:id="@+id/spinner_category"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/new_post_spinner_background"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@id/view_tool_panel"
        app:layout_constraintStart_toStartOf="@id/view_tool_panel"
        app:layout_constraintTop_toBottomOf="@id/btn_add_btn" />


    <ru.teamdroid.colibripost.ui.screens.new_task.NewTaskSpinner
        android:id="@+id/spinner_publish"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/new_post_spinner_background"
        app:layout_constraintEnd_toEndOf="@id/view_tool_panel"
        app:layout_constraintStart_toStartOf="@id/view_tool_panel"
        app:layout_constraintTop_toBottomOf="@id/spinner_category" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_date"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/new_post_spinner_background"
        app:layout_constraintEnd_toStartOf="@id/tv_time"
        app:layout_constraintStart_toStartOf="@id/view_tool_panel"
        app:layout_constraintTop_toBottomOf="@id/spinner_publish" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_time"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/new_post_spinner_background"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/spinner_date"
        app:layout_constraintEnd_toEndOf="@id/view_tool_panel"
        app:layout_constraintStart_toEndOf="@id/spinner_date"
        app:layout_constraintTop_toTopOf="@id/spinner_date"
        tools:text="11:00" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_preview"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/preview"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        app:layout_constraintEnd_toStartOf="@id/btn_send_post"
        app:layout_constraintStart_toStartOf="@id/view_tool_panel"
        app:layout_constraintTop_toBottomOf="@id/spinner_date"
        app:strokeColor="@color/accent"
        app:strokeWidth="1dp" />

    <ImageButton
        android:id="@+id/btn_send_post"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:background="@drawable/new_post_send_post_background"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:src="@drawable/ic_telegram"
        app:layout_constraintBottom_toBottomOf="@id/btn_preview"
        app:layout_constraintEnd_toEndOf="@id/tv_time"
        app:layout_constraintStart_toStartOf="@id/tv_time"
        app:layout_constraintTop_toTopOf="@id/btn_preview" />


</androidx.constraintlayout.widget.ConstraintLayout>